#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-88
2020-08-15 Mikhail S. Dubrovin
- update UtilsEpix10kaCalib.py

Tag: V01-00-87 ???

Tag: V01-00-86
2020-08-08 Mikhail S. Dubrovin
- update epix10ka_* scripts
  - in epix10ka_offset_calibration, epix10ka_pedestals_calibration - check if gain mode in meta coincides with config
  - in epix10ka_deploy_constants - fix default for gainci
	renamed:    app/epix10ka_ndarr_dark_proc -> app/deprecated_epix10ka_ndarr_dark_proc
	modified:   app/epix10ka_deploy_constants
	modified:   app/epix10ka_offset_calibration
	modified:   app/epix10ka_pedestals_calibration
	renamed:    examples/ex_epix10ka2m_test_calibcycles.py -> app/epix10ka_test_calibcycles
	modified:   examples/ex_epix10ka_images.py
	modified:   src/UtilsEpix10kaCalib.py

Tag: V01-00-85
2020-08-04 Mikhail S. Dubrovin
- use default and average ADU/keV gain factors for epix10ka
	modified:   ../app/epix10ka_deploy_constants
	modified:   UtilsEpix10kaCalib.py

Tag: V01-00-84
2020-07-24 Mikhail S. Dubrovin
- fix indexing issue in algorithm
	modified:   ../app/epix10ka_offset_calibration
	modified:   UtilsEpix10kaCalib.py

Tag: V01-00-83
2020-07-14 Mikhail S. Dubrovin
- fix nrec counter limit, add ccmax for pedestal calibration
	modified:   ../app/epix10ka_pedestals_calibration
	modified:   UtilsEpix10kaCalib.py
- extend examples:
	modified:   ../examples/ex_jungfrau_images.py
	new file:   ../examples/test-2020-07-02-cspad-cm-issue-silke-aviad.py

Tag: V01-00-82
2020-07-06 crisvam
- fix for case where epics alias name may be present even when pv is mi?

Tag: V01-00-81
2020-06-23 Mikhail S. Dubrovin